<resources>
    <string name="app_name">SkinPal</string>

    <string name="success">Success</string>
    <string name="account_created_message">Account with %1$s has been created. Please login to start.</string>
    <string name="title_home">Home</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="title_login_page">Login</string>
    <string name="message_login_page">Fill your data</string>
    <string name="email">Email</string>
    <string name="email_error">Enter a valid email</string>
    <string name="fill_email">Enter your email</string>
    <string name="password_setting">Password must have at least 8 character</string>
    <string name="fill_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_register_page">Welcome to SkinPal!</string>
    <string name="register">REGISTER</string>
    <string name="fill_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="title_product">Product Recommendations</string>
    <string name="title_account">Account</string>
    <string name="title_reminder">Reminder</string>
    <string name="empty">" "</string>
    <string name="no_item_found">No product found.</string>
    <string name="title_product2">Product</string>
    <string name="product_name">Product</string>
    <string name="greetings">Get ready to start your beauty journey with us!</string>
    <string name="skin_check">Get to Know Your Skin Type</string>
    <string name="skin_check_text">Do you know what is your skin type? Scan your face and get the results to start using the right products.</string>
    <string name="reminder">Schedule</string>
    <string name="greeting">Hello, User!</string>
    <string name="scan_button">Scan</string>
    <string name="no_events_found">No article</string>
    <string name="article_title">article_title</string>
    <string name="article">Read Articles about Beauty</string>
    <string name="daily_streak">Daily Streak</string>
    <string name="daily_point">11</string>
    <string name="skin_condition">-</string>
    <string name="skin_condition_title">Your Skin Condition</string>
    <string name="skin_type_title">Your Skin Type</string>
    <string name="your_web_client_id">475162384274-ist1a36h9bnb7i9m2u8vaae4on1jmnno.apps.googleusercontent.com</string>
    <string name="gallery">gallery</string>
    <string name="savedImage">Save image</string>
    <string name="failed_take_photo">Failed to take a photo</string>
    <string name="failed_load_camera">Failed to load camera</string>
    <string name="camera">Camera</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="image_saved">Image saved</string>
    <string name="skin_update_text">Upload your face image and get the result of your skin progress every month.</string>
    <string name="skin_update">Track Your Progress</string>
    <string name="start">Start</string>
    <string name="your_skin_progress">Your Skin Progress</string>
    <string name="skin_condition_week_1">Skin Condition Week 1</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="skin_condition_week_2">Skin Condition Week 2</string>
    <string name="skin_condition_week_3">Skin Condition Week 3</string>
    <string name="skin_condition_week_4">Skin Condition Week 4</string>
    <string name="cropping_failed">Cropping failed</string>
    <string name="cropping_cancelled">Cropping canceled</string>
    <string name="week_title">Week %a</string>
    <string name="analyze">Analyze</string>
    <string name="welcome_back">Welcome back to SkinPal!</string>
    <string name="message_login_google">Or login with</string>
    <string name="image_name">Image Name</string>
    <string name="additional_information">Additional information about the image.</string>
    <string name="photo_profile">Profile Photo</string>
    <string name="Username">Username</string>
    <string name="invalid_credentials">invalid credentials</string>
    <string name="generic_error_message">Login failed</string>
    <string name="empty_image_warning">Image is empty</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="fill_username">Enter your username</string>
    <string name="skin_type">Skin Type</string>
    <string name="skin_condition_week_0">First Scan</string>
    <string name="showResult">Show Result</string>
    <string name="message_register">Don\'t have an account? Register here</string>
    <string name="default_user">User</string>
    <string name="greeting_format">"Hello, %s"</string>
    <string name="no_skin_conditions">Skin conditions</string>
    <string name="no_skin_type">Skin Type</string>
    <string name="default_week">Week -</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="logout">LOGOUT</string>
    <string name="search_hint">Search product</string>
    <string name="products">Product Recommendations</string>
    <string name="product_detail">Product Detail\n</string>
    <string name="notification">Daily Notification</string>
    <string name="notifications_permission_granted">Notification permission granted</string>
    <string name="notifications_permission_rejected">Notification permission rejected</string>
    <string name="mode">Dark Mode</string>
    <string name="product_image">Product Image</string>
    <string name="product_ingredients">Product Ingredients</string>
    <string name="product_type">Product Type</string>
    <string name="product_description">Product Description</string>
    <string name="product_link">See Product</string>
    <string name="detail_product">Product Detail</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="default_username">User</string>
    <string name="no_product_found">No favorite products found.</string>
    <string name="reupload_photo">Reupload Photo</string>
    <string name="app_logo">SkinPal</string>
    <string name="SkinType">Skin Type Title</string>
    <string name="description_of_skin_type_goes_here">Description of skin type goes here</string>
    <string name="oily_skin">Oily Skin</string>
    <string name="dry_skin">Dry Skin</string>
    <string name="combination_skin">Combination Skin</string>
    <string name="oily_skin_desc">Your skin produces excess oil, leading to shine and acne.</string>
    <string name="dry_skin_desc">Your skin feels tight and lacks moisture.</string>
    <string name="combi_skin_desc">Your skin is oily in some areas and dry in others.</string>
    <string name="user_not_authenticated">User not authenticated</string>
    <string name="user_id_kosong_atau_belum_login">User ID is empty or invalid login\n</string>
    <string name="accountfragment">AccountFragment</string>
    <string name="onboarding_page1">Welcome to SkinPal</string>
    <string name="onboarding_page2">Analyze Your Skin</string>
    <string name="onboarding_page4">Monitor Your Skin Condition</string>
    <string name="onboarding_page3">Stay on Track</string>
    <string name="onboarding_desc1">Your personalized skincare assistant!. SkinPal is here to revolutionize your skincare journey. From personalized product recommendations to tracking your skin\'s progress, we’ve got everything you need to achieve healthy, glowing skin. Let SkinPal be your trusted companion in understanding and caring for your unique skin needs.</string>
    <string name="onboarding_desc2">Get insights about your skin condition and skincare routine ✨. SkinPal uses advanced facial scanning technology to analyze your skin and provide accurate results tailored to your needs. Discover personalized recommendations and take the guesswork out of your skincare journey.</string>
    <string name="onboarding_desc3">Receive your daily reminders for skincare routine ⏰. SkinPal helps you build consistency by sending notifications for your morning and evening skincare steps. Stay committed, stay glowing, and let us guide you toward healthier skin every day.</string>
    <string name="onboarding_desc4">Upload your skin photo and get detailed progress updates after 1 month! With SkinPal, you can track changes in your skin condition over time and see how your skincare routine makes a difference. Stay informed and motivated on your journey to healthier skin.</string>
    <string name="title_setting">Setting</string>
    <string name="user_id_kosong_atau_belum_log">User ID kosong atau belum login</string>
    <string name="ambil_foto_baru">Ambil Foto Baru</string>
    <string name="pilih_dari_galeri">Pilih dari Galeri</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="izin_kamera_diperlukan">Izin Kamera Diperlukan</string>
    <string name="akses_kamera">Aplikasi memerlukan akses kamera untuk mengambil foto profil.</string>
    <string name="next">Next</string>
    <string name="skin_type_normal">Skin Type: Normal</string>
    <string name="conditions_acne_redness_wrinkles">Conditions: Acne, Redness, Wrinkles</string>
    <string name="_32_41_progress">32.41% progress</string>
    <string name="notes">Notes</string>
    <string name="my_profile">My Profile</string>
    <string name="the_skin_types">The Skin Types</string>
    <string name="fyi">FYI</string>
    <string name="slide_to_see_more">← Slide to see more →</string>
    <string name="acne">Acne:</string>
    <string name="redness">Redness:</string>
    <string name="wrinkles">Wrinkles:</string>
    <string name="monthly_progress">Monthly Progress</string>
    <string name="progress_value">progress value</string>
    <string name="message">message</string>
    <string name="product_recommendations">Product Recommendations</string>
    <string name="facial_wash">Facial Wash</string>
    <string name="toner">Toner</string>
    <string name="serum">Serum</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="sunscreen">Sunscreen</string>
    <string name="treatment">Treatment</string>
    <string name="skin_type_result">Skin Type:</string>
    <string name="welcome_to_skinpal">Welcome to SkinPal</string>
    <string name="your_personalized_skincare_assistant">Your personalized skincare assistant!</string>
</resources>