<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/skincare_ic"
        android:title=""/>

    <item
        android:id="@+id/navigation_empty"
        android:title="@string/empty"
        android:enabled="false"/>

    <item
        android:id="@+id/navigation_reminder"
        android:icon="@drawable/ic_chart"
        android:title="@string/title_reminder"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/icon_account"
        android:title="@string/title_account"
        android:iconTint="@color/black"/>


</menu>