<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_profile"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/photo_profile"
            android:src="@drawable/icon_person"
            app:layout_constraintBottom_toTopOf="@+id/nama"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:padding="4dp"
            android:text="@string/name"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/photo_profile"
            app:layout_constraintStart_toStartOf="@+id/photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/photo_profile" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/email"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/nama"
            app:layout_constraintStart_toStartOf="@+id/nama"
            app:layout_constraintTop_toBottomOf="@+id/nama" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:text="logout"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="52dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
